recursion.lessons.recursion.koch.PentaKoch.scala.code
def pentaKoch(levels:Int, length:Double) {
			if ( levels == 0) {
		avance(length)
	} else {
		pentaKochSide(levels-1, length*0.4)
		gauche(180-72)
		pentaKochSide(levels-1, length*0.4)
		droite(72)
		pentaKochSide(levels-1, length*0.4)
		droite(72)
		pentaKochSide(levels-1, length*0.4)
		droite(72)
		pentaKochSide(levels-1, length*0.4)
		gauche(180-72)
		pentaKochSide(levels-1, length*0.4)
	}
}